refactor(user): refactoring docs and add birthday, username for user struct
